(Format: Year/Month/Day)
Changes for 0.9.3:
*03/05/24:
   * Fix crash when toolbar turned off, and toolbar initialisation (Simon)
     Menu.cc Screen.cc Toolbar.cc
*03/05/21:
   * Fix cascade placement for multiple heads (Simon)
     Workspace.hh/cc Window.hh/cc FbWinFrame.hh/cc
*03/05/20:
   * Add xinerama for placement and snapping, plus tidy (Simon)
     Screen.hh/cc Window.cc Workspace.cc
*03/05/19:
   * Clean + change xinerama, plus add maximize smarts (Simon)
     Screen.hh/cc Window.cc Workspace.cc Toolbar.cc Slit.cc     
   * Fixed minor bug in bsetroot (Henrik)
     bsetroot.cc
   * Add back some Xinerama support (still need placement + maximise) (Simon)
     Screen.hh/cc Toolbar.cc Slit.cc Xinerama.hh
   * Fix bsetroot segfault (Simon)
     FbWindow.cc
*03/05/18:
   * Moved Resource.hh/cc, DirHelper.hh/cc and 
     XrmDatabaseHelper.hh to FbTk (Henrik)
	 Screen.hh/cc, fluxbox.hh/cc, IntResMenuItem.hh/cc
*03/05/17:
   * Fixed autohide bug in toolbar (Thanks MrChuoi)
     Toolbar.cc, ArrowButton.hh/cc
   * Fixed slit client bug (Thanks MrChuoi)
     Slit.cc
   * Fixed cursor for grips (Thanks MrChuoi)
     Window.cc
   * Fixed minor bug in FbTk::EventManager (Thanks MrChuoi)
     FbTk/EventManager.cc
*03/05/16:
   * Fixed logging file and better info message (Henrik)
     New argument to fluxbox -log <filename>
	 main.cc
*03/05/14:
   * Fixed Shape events, this fixes some decor issues with gkrellm and xmms (Henrik)
     Window.cc/hh, fluxbox.cc/hh
   * Fixed crash bug when client died and clientlist wasn't updated (Henrik)
     WinClient.hh/cc, Screen.cc, Workspace.hh, fluxbox.cc
*03/05/13:
   * Fixed transparent slit and minor bug in transparent (Henrik)
     Slit.cc, Screen.hh/cc, Transparent.cc
   * Fixed Slit redraw bug (Henrik)
     Slit.cc
   * Removed ScreenInfo.hh/cc (Henrik)
   * Fixed better error msg for display connection (Henrik)
     fluxbox.cc
   * Fix saving of Workspace Icons Toolbar mode (Simon)
     Screen.cc